# HumanoidMimicry

./: .gitignore  README.md  clean  compile.sh  compilenew.sh  frames_2025-07-10_12.41.45.gv  frames_2025-07-10_12.42.11.gv  frames_2025-07-10_12.42.22.gv  install_deps  install_pinocchio.sh  setup.sh  setup_lo.sh  setup_local.sh
bagData/: bagData_0.db3  metadata.yaml
launch/: pose_tracker_launch.py
pose_tracker/: package.xml
pose_tracker/pose_tracker/: pose_tracker.py
rosboard/rosboard/html/js/: index.js
rviz/: pose_tracker.rviz
src/camera_tf_transformer/: package.xml  setup.cfg  setup.py
src/camera_tf_transformer/camera_tf_transformer/: pointcloud_transformer.py
src/camera_tf_transformer/camera_tf_transformer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/fcl_self_collision_checker/: CMakeLists.txt  README.md  package.xml
src/fcl_self_collision_checker/src/: main.cpp
src/fcl_self_collision_checker/urdf/: g1_29dof_lock_waist.urdf
src/livox_ros_driver2/: CMakeLists.txt
src/livox_ros_driver2/config/: MID360_config.json
src/pose_tracker/: setup.cfg  setup.py
src/pose_tracker/pose_tracker/: pose_follower.py  pose_tracker.py  robot_arm_ik.py  robot_arm_tr.py
src/rosboard/rosboard/html/: index.html
src/unitree_urdf_publisher/: package.xml  setup.cfg  setup.py
src/unitree_urdf_publisher/urdf/: g1_29dof.urdf  g1_29dof_lock_waist.urdf
src/web_server_node/: package.xml  setup.py
src/web_server_node/web_server_node/: index.html
urdf/: g1.urdf  g1_29dof_lock_waist.urdf
web_server_node/: setup.cfg
web_server_node/web_server_node/: web_server.py
