<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fcl_self_collision_checker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="23338559@student.uwa.edu.au">joelsmith</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>urdfdom</depend>
  <!-- <depend>resource_retriever</depend> -->
  <depend>sensor_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>urdf</depend>
  <depend>fcl</depend>
  <depend>visualization_msgs</depend>
  <build_depend>resource_retriever</build_depend>
  <exec_depend>resource_retriever</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
